# word_count

./: CMakeLists.txt  README.md
wordCount/: a.out  utils.cpp  utils.hpp  word_count.cpp
